--- a/index.html
+++ b/index.html
@@ -136,6 +136,36 @@
               <div class="employees-wrapper">
                 <h3 class="subtitle name-surname">Mark Guerrero</h3>
                 <p class="section-description position">Product Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -144,6 +174,36 @@
               <div class="employees-wrapper">
                 <h3 class="subtitle name-surname">Tom Ford</h3>
                 <p class="section-description position">Frontend Developer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -156,6 +216,36 @@
               <div class="employees-wrapper">
                 <h3 class="subtitle name-surname">Camila Garcia</h3>
                 <p class="section-description position">Marketing</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -168,23 +258,139 @@
               <div class="employees-wrapper">
                 <h3 class="subtitle name-surname">Daniel Wilson</h3>
                 <p class="section-description position">UI Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href class="social-list-link"
+                      ><svg class="social-list-icon" width="16" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+      <!-- Customers -->
+      <section class="section customers">
+        <div class="container">
+          <h2 class="section-title">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customer-item">
+              <a href class="customer-link"
+                ><svg class="customer-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-Logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href class="customer-link"
+                ><svg class="customer-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href class="customer-link"
+                ><svg class="customer-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href class="customer-link"
+                ><svg class="customer-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href class="customer-link"
+                ><svg class="customer-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href class="customer-link"
+                ><svg class="customer-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
+            </li>
+                      
         </div>
       </section>
     </main>
 
     <!--Footer-->
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer link" href="./index.html"
-          >Web<span class="accent-logo-footer">Studio</span></a
-        >
-        <p class="footer-description">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-content">
+        <div class="logo-text">
+          <a class="logo-footer link" href="./index.html"
+            >Web<span class="accent-logo-footer">Studio</span></a
+          >
+          <p class="footer-description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="social-media-footer">
+          <p class="social-media-title">Social media</p>
+          <ul class="social-list list">
+            <li class="social-list-item">
+              <a href class="social-list-link"
+                ><svg class="social-list-icon" width="16" height="20">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href class="social-list-link"
+                ><svg class="social-list-icon" width="16" height="20">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href class="social-list-link"
+                ><svg class="social-list-icon" width="16" height="20">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href class="social-list-link"
+                ><svg class="social-list-icon" width="16" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
