--- a/index.html
+++ b/index.html
@@ -362,28 +362,28 @@
           <p class="social-media-title">Social media</p>
           <ul class="social-list list">
             <li class="social-list-item">
-              <a href class="social-list-link"
+              <a href class="social-list-link footer-accent"
                 ><svg class="social-list-icon" width="16" height="20">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href class="social-list-link"
+              <a href class="social-list-link footer-accent"
                 ><svg class="social-list-icon" width="16" height="20">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href class="social-list-link"
+              <a href class="social-list-link footer-accent"
                 ><svg class="social-list-icon" width="16" height="20">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href class="social-list-link"
+              <a href class="social-list-link footer-accent"
                 ><svg class="social-list-icon" width="16" height="20">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
