--- a/index.html
+++ b/index.html
@@ -67,28 +67,49 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list list">
             <li class="feature-content">
-              <h3 class="subtitle">Strategy</h3>
+              <a href class="feature-list-icon">
+                <svg class="feature-icon" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </a>
+
+              <h3 class="subtitle feature">Strategy</h3>
               <p class="section-description">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="feature-content">
-              <h3 class="subtitle">Punctuality</h3>
+              <a href class="feature-list-icon">
+                <svg class="feature-icon" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </a>
+              <h3 class="subtitle feature">Punctuality</h3>
               <p class="section-description">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="feature-content">
-              <h3 class="subtitle">Diligence</h3>
+              <a href class="feature-list-icon">
+                <svg class="feature-icon" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </a>
+              <h3 class="subtitle feature">Diligence</h3>
               <p class="section-description">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="feature-content">
-              <h3 class="subtitle">Technologies</h3>
+              <a href class="feature-list-icon">
+                <svg class="feature-icon" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </a>
+              <h3 class="subtitle feature">Technologies</h3>
               <p class="section-description">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -340,7 +361,7 @@
                 </svg>
               </a>
             </li>
-                      
+          </ul>
         </div>
       </section>
     </main>
