--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list list">
             <li class="feature-content">
-              <a href class="feature-list-icon">
+              <div class="feature-list-icon">
                 <svg class="feature-icon" width="64" height="64">
                   <use href="./images/sprite.svg#icon-antenna"></use>
                 </svg>
-              </a>
+              </div>
 
               <h3 class="subtitle feature">Strategy</h3>
               <p class="section-description">
@@ -80,11 +80,11 @@
               </p>
             </li>
             <li class="feature-content">
-              <a href class="feature-list-icon">
+              <div class="feature-list-icon">
                 <svg class="feature-icon" width="64" height="64">
                   <use href="./images/sprite.svg#icon-clock"></use>
                 </svg>
-              </a>
+              </div>
               <h3 class="subtitle feature">Punctuality</h3>
               <p class="section-description">
                 Bring the key message to the brand's audience for the best price
@@ -92,11 +92,11 @@
               </p>
             </li>
             <li class="feature-content">
-              <a href class="feature-list-icon">
+              <div class="feature-list-icon">
                 <svg class="feature-icon" width="64" height="64">
                   <use href="./images/sprite.svg#icon-diagram"></use>
                 </svg>
-              </a>
+              </div>
               <h3 class="subtitle feature">Diligence</h3>
               <p class="section-description">
                 Research and confirm brands that present the strongest digital
@@ -104,11 +104,11 @@
               </p>
             </li>
             <li class="feature-content">
-              <a href class="feature-list-icon">
+              <div class="feature-list-icon">
                 <svg class="feature-icon" width="64" height="64">
                   <use href="./images/sprite.svg#icon-astronaut"></use>
                 </svg>
-              </a>
+              </div>
               <h3 class="subtitle feature">Technologies</h3>
               <p class="section-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -160,28 +160,28 @@
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href class="social-list-link"
-                      ><svg class="social-list-icon" width="16" height="20">
+                      ><svg class="social-list-icon" width="16" height="16">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
-                      ><svg class="social-list-icon" width="16" height="20">
+                      ><svg class="social-list-icon" width="16" height="16">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
-                      ><svg class="social-list-icon" width="16" height="20">
+                      ><svg class="social-list-icon" width="16" height="16">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
-                      ><svg class="social-list-icon" width="16" height="20">
+                      ><svg class="social-list-icon" width="16" height="16">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -381,31 +381,31 @@
 
         <div class="social-media-footer">
           <p class="social-media-title">Social media</p>
-          <ul class="social-list list">
+          <ul class="social-list-footer list">
             <li class="social-list-item">
               <a href class="social-list-link footer-accent"
-                ><svg class="social-list-icon" width="16" height="20">
+                ><svg class="social-list-icon" width="24" height="24">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href class="social-list-link footer-accent"
-                ><svg class="social-list-icon" width="16" height="20">
+                ><svg class="social-list-icon" width="24" height="24">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href class="social-list-link footer-accent"
-                ><svg class="social-list-icon" width="16" height="20">
+                ><svg class="social-list-icon" width="24" height="24">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href class="social-list-link footer-accent"
-                ><svg class="social-list-icon" width="16" height="20">
+                ><svg class="social-list-icon" width="24" height="24">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
