--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
 
           <ul class="our-jobs list">
             <li class="our-jobs-content">
-              <a class="link">
+              <a href class="our-jobs-link link">
                 <img
                   src="./images/banking-app.jpg"
                   alt="Banking application"
@@ -90,7 +90,7 @@
             </li>
 
             <li class="our-jobs-content">
-              <a class="link">
+              <a href class="our-jobs-link link">
                 <img
                   src="./images/cashless-payment.jpg"
                   alt="Payment via qr-code"
@@ -104,7 +104,7 @@
             </li>
 
             <li class="our-jobs-content">
-              <a class="link">
+              <a href class="our-jobs-link link">
                 <img
                   src="./images/meditation-app.jpg"
                   alt="Laptop and phone"
@@ -118,7 +118,7 @@
             </li>
 
             <li class="our-jobs-content">
-              <a class="link">
+              <a href class="our-jobs-link link">
                 <img
                   src="./images/taxi-service.jpg"
                   alt="Hands on wheel and phone"
@@ -132,7 +132,7 @@
             </li>
 
             <li class="our-jobs-content">
-              <a class="link">
+              <a href class="our-jobs-link link">
                 <img
                   src="./images/screen-illustrations.jpg"
                   alt="Phone with screen wallpapers"
@@ -146,7 +146,7 @@
             </li>
 
             <li class="our-jobs-content">
-              <a class="link">
+              <a href class="our-jobs-link link">
                 <img
                   src="./images/online-courses.jpg"
                   alt="Girl with phone"
@@ -160,7 +160,7 @@
             </li>
 
             <li class="our-jobs-content">
-              <a class="link">
+              <a href class="our-jobs-link link">
                 <img
                   src="./images/instagram-stories.jpg"
                   alt="Examples of stories design"
@@ -174,7 +174,7 @@
             </li>
 
             <li class="our-jobs-content">
-              <a class="link">
+              <a href class="our-jobs-link link">
                 <img
                   src="./images/organic-food.jpg"
                   alt="Girl with food in bag"
@@ -188,7 +188,7 @@
             </li>
 
             <li class="our-jobs-content">
-              <a class="link">
+              <a href class="our-jobs-link link">
                 <img
                   src="./images/fresh-coffee.jpg"
                   alt="Cup of coffee"
