--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li class="feature-content">
               <div class="feature-list-icon">
                 <svg class="feature-icon" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-antenna"></use>
+                  <use href="./images/icon.svg#icon-antenna"></use>
                 </svg>
               </div>
 
@@ -82,7 +82,7 @@
             <li class="feature-content">
               <div class="feature-list-icon">
                 <svg class="feature-icon" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-clock"></use>
+                  <use href="./images/icon.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="subtitle feature">Punctuality</h3>
@@ -94,7 +94,7 @@
             <li class="feature-content">
               <div class="feature-list-icon">
                 <svg class="feature-icon" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-diagram"></use>
+                  <use href="./images/icon.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="subtitle feature">Diligence</h3>
@@ -106,7 +106,7 @@
             <li class="feature-content">
               <div class="feature-list-icon">
                 <svg class="feature-icon" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                  <use href="./images/icon.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="subtitle feature">Technologies</h3>
@@ -161,28 +161,28 @@
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -199,28 +199,28 @@
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="20">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="20">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="20">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="20">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -241,28 +241,28 @@
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="20">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="20">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="20">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="20">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -283,28 +283,28 @@
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="20">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="20">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="20">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href class="social-list-link"
                       ><svg class="social-list-icon" width="16" height="20">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -322,42 +322,42 @@
             <li class="customer-item">
               <a href class="customer-link"
                 ><svg class="customer-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-Logo"></use>
+                  <use href="./images/icon.svg#icon-Logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-item">
               <a href class="customer-link"
                 ><svg class="customer-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-Logo-1"></use>
+                  <use href="./images/icon.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-item">
               <a href class="customer-link"
                 ><svg class="customer-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-Logo-2"></use>
+                  <use href="./images/icon.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-item">
               <a href class="customer-link"
                 ><svg class="customer-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-Logo-3"></use>
+                  <use href="./images/icon.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-item">
               <a href class="customer-link"
                 ><svg class="customer-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-Logo-4"></use>
+                  <use href="./images/icon.svg#icon-Logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-item">
               <a href class="customer-link"
                 ><svg class="customer-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-Logo-5"></use>
+                  <use href="./images/icon.svg#icon-Logo-5"></use>
                 </svg>
               </a>
             </li>
@@ -385,28 +385,28 @@
             <li class="social-list-item">
               <a href class="social-list-link footer-accent"
                 ><svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
+                  <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href class="social-list-link footer-accent"
                 ><svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
+                  <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href class="social-list-link footer-accent"
                 ><svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
+                  <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href class="social-list-link footer-accent"
                 ><svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                  <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
