--- a/portfolio.html
+++ b/portfolio.html
@@ -207,14 +207,50 @@
 
     <!--Footer-->
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer link" href="./index.html"
-          >Web<span class="accent-logo-footer">Studio</span></a
-        >
-        <p class="footer-description">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-content">
+        <div class="logo-text">
+          <a class="logo-footer link" href="./index.html"
+            >Web<span class="accent-logo-footer">Studio</span></a
+          >
+          <p class="footer-description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="social-media-footer">
+          <p class="social-media-title">Social media</p>
+          <ul class="social-list-footer list">
+            <li class="social-list-item">
+              <a href class="social-list-link footer-accent"
+                ><svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icon.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href class="social-list-link footer-accent"
+                ><svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icon.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href class="social-list-link footer-accent"
+                ><svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icon.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href class="social-list-link footer-accent"
+                ><svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icon.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
