update portfolio html

--- a/portfolio.html
+++ b/portfolio.html
@@ -205,7 +205,7 @@
       </section>
     </main>
 
-    <!--Footer-->
+    <!--Footer(updated)-->
     <footer class="footer">
       <div class="container footer-content">
         <div class="logo-text">
